fix spacing

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -35,6 +35,7 @@ body {
 
         display: flex;
         height: $header-height;
+        margin-bottom: 1rem;
         background: color.$base-dark;
         vertical-align: middle;
         color: color.$base-light;
@@ -122,14 +123,9 @@ body {
         }
     }
 
-    > main,
-    > aside {
-        @include mixin.margin-y( 1rem );
-    }
-
     > footer {
         border-top: thin solid color.$base-dark;
-        font-size: 75%;
+        font-size: 80%;
 
         > p {
             @include mixin.padding-x( 1rem );
@@ -157,6 +153,7 @@ main article header {
 
 h3 {
     min-height: 1.7rem;
+    margin-bottom :1rem;
     padding-left: 0.5rem;
     border-left: 1.7rem solid color.$base-dark;
     line-height: 1.7rem;
