--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,7 +8,7 @@ body {
     justify-content: space-between;
 
     > header {
-        flex: 0 0 8rem;
+        flex: 0 1 8rem;
     }
 
     > main {
