--- a/sass/profile.scss
+++ b/sass/profile.scss
@@ -9,7 +9,7 @@ table.history {
 
     tr {
         th, td {
-            padding-top: 1rem;
+            padding-top: 0.6rem;
         }
     
         th {
